git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "89b2d19"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "89b2d19"
git-subrepo:
  version:  "0.2.1"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b136967"

--- a/perl6/doc/lib/Language/classtut.pod
+++ b/perl6/doc/lib/Language/classtut.pod
@@ -315,7 +315,7 @@ as the bind targets for C<BUILD>'s parameters. Zero-boilerplate
 initialization! See L<objects|/language/objects#Object Construction> for
 more information.
 
-The C<BUILD> method is responsible for initialilzing all attributes, it must
+The C<BUILD> method is responsible for initializing all attributes, it must
 handle default values too:
 
     has &!callback;
@@ -329,7 +329,7 @@ handle default values too:
         ) { }
 
 See L<Object Construction|/language/objects#Object Construction> for more
-options to influence object construction and attribute initializtion.
+options to influence object construction and attribute initialization.
 
 =head1 Consuming our class
 
