--- a/perl6/doc/lib/Language/unicode_entry.pod
+++ b/perl6/doc/lib/Language/unicode_entry.pod
@@ -135,4 +135,31 @@ For example, to assign the value 3 to π, enter the following in Vim
     my $B<Ctrl-V u 03C0> = 3;  # same as: my $π = 3;
     say $B<Ctrl-V u 03C0>;     # 3    same as: say $π;
 
+=head2 Superscripts and subscripts
+
+A limited set of
+L<superscripts and subscripts|http://en.wikipedia.org/wiki/Superscripts_and_Subscripts>
+can be created directly in unicode by using the C<U+207x>, C<U+208x> and
+(less often) the C<U+209x> ranges.  However, to produce a value squared (to
+the power of 2) or cubed (to the power of 3), one needs to use C<U+00B2> and
+C<U+00B3> since these are defined in the
+L<Latin1 supplement Unicode block|http://en.wikipedia.org/wiki/Latin-1_Supplement_(Unicode_block)>.
+
+Thus, to write the L<Taylor series|http://en.wikipedia.org/wiki/Taylor_series>
+expansion around zero of the function C<exp(x)> one would input into e.g.
+vim the following:
+
+=for code :allow<B>
+    exp(x) = 1 + x + xB<Ctrl-V u 00B2>/2! + xB<Ctrl-V u 00B3>/3!
+	+ ... + xB<Ctrl-V u 207F>/n!
+    # which would appear as
+    exp(x) = 1 + x + x²/2! + x³/3! + ... + xⁿ/n!
+
+Or to specify the elements in a list from C<1> up to C<k>:
+
+=for code :allow<B>
+    AB<Ctrl-V u 2081>, AB<Ctrl-V u 2082>, ..., AB<Ctrl-V u 2096>
+    # which would appear as
+    A₁, A₂, ..., Aₖ
+
 =end pod
