--- a/perl6/doc/lib/Language/variables.pod
+++ b/perl6/doc/lib/Language/variables.pod
@@ -157,7 +157,7 @@ accessed via C<$!x> and C<$!y>. This is because in Perl 6 all attributes are
 private and can be directly accessed within the class by using
 C<$!attribute-name>. Perl 6 may automatically generate accessor methods for
 you though. For more details on objects, classes and their attributes see
-L<objects>.
+L<object orientation|/language/objects>.
 
 =head2 The C<?> Twigil
 
@@ -210,7 +210,7 @@ following is possible too:
     =end code
 
 For more details on objects, classes and their attributes and methods see
-L<objects>.
+L<object orientation|/language/objects>.
 
 =head2 The C«<» Twigil
 
