git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "93f4bc1"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "93f4bc1"
git-subrepo:
  version:  "0.2.1"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b136967"

--- a/perl6/doc/lib/Language/functions.pod
+++ b/perl6/doc/lib/Language/functions.pod
@@ -401,8 +401,8 @@ Examples of traits are:
     #            ^^^^^  trait with name 'rw'
     class SomeClass does AnotherRole { ... }
     #               ^^^^ trait
-    has $another-attribute handles <close>;
-    #                      ^^^^^^^ trait
+    has $!another-attribute handles <close>;
+    #                       ^^^^^^^ trait
 
 ... and also C<is tighter>, C<is looser>, C<is equiv> and C<is assoc> from the previous
 section.
