--- a/perl6/doc/lib/Language/variables.pod
+++ b/perl6/doc/lib/Language/variables.pod
@@ -703,6 +703,9 @@ X<$*CWD|variable.$*CWD>
     $*PROGRAM_NAME     Path to the current executable as it was entered on the
                        command line, or C<-e> if perl was invoked with the -e flag.
     ==
+    $*PROGRAM          Location (in the form of an C<IO::Path> object) of the
+                       Perl program being executed.
+    ==
     $*EXECUTABLE       Absolute path of the perl executable that is currently running.
     ==
     $*EXECUTABLE_NAME  The name of the perl executable that is currently running.
