--- a/perl6/doc/lib/Type/IO/Path.pod
+++ b/perl6/doc/lib/Type/IO/Path.pod
@@ -38,7 +38,7 @@ passed as named arguments.
 
 =head2 method abspath
 
-Retturns the absolute path as a string.
+Returns the absolute path as a string.
 
 =head2 method basename
 
