git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "eca2f2d"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "eca2f2d"
git-subrepo:
  version:  "0.2.1"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b136967"

--- a/perl6/doc/lib/Language/exceptions.pod
+++ b/perl6/doc/lib/Language/exceptions.pod
@@ -24,8 +24,8 @@ C<die> with a message as to what went wrong:
 =head2 Typed exceptions
 
 Typed exceptions provide more information about the kind of error that
-occured within the exception object itself.  For instance, if while
-executing C<.zompie copy> on an object the path C<foo/bar> is unavailable
+occurred within the exception object itself.  For instance, if while
+executing C<.zombie copy> on an object the path C<foo/bar> is unavailable
 (and was expected to be available), then one could raise an
 L<X::IO::DoesNotExist> exception like so:
 
