--- a/perl6/doc/lib/Language/variables.pod
+++ b/perl6/doc/lib/Language/variables.pod
@@ -526,6 +526,17 @@ Variables with the C<@> sigil are initialized with an empty
 L<Array|/type/Array>; variables with the C<%> sigil are initialized with an
 empty L<Hash|/type/Hash>.
 
+The default value of a variable can be set with the C<is default> trait, and
+re-applied by assigning C<Nil> to it:
+
+    my Real $product is default(1);
+    say $product;                       # 1
+    $produce *= 5;
+    say $product;                       # 5
+    $product = Nil;
+    say $product;                       # 1
+
+
 =head1 Special Variables
 
 Perl 5 is infamous for its many obscure special variables. Perl 6 also has
