--- a/perl6/doc/lib/Language/concurrency.pod
+++ b/perl6/doc/lib/Language/concurrency.pod
@@ -620,7 +620,7 @@ shared data in a concurrent environment and is thus key to supporting
 thread-safety in the high level API, this is sometimes known as a
 "Mutex" in other programming languages.  Because the higher level classes
 (L<Promise>, L<Supply> andL<Channel>,) use a L<Lock> where required it
-is unlikey that user code will need to use a L<Lock> directly.
+is unlikely that user code will need to use a L<Lock> directly.
 
 The primary interface to L<Lock> is the method
 L<protect|/type/Lock#method_protect> which ensures that a block of code
