git subrepo clone --force git://github.com/p6-pdf/perl6-Font-AFM.git p6-pdf/perl6-Font-AFM
subrepo:
  subdir:   "p6-pdf/perl6-Font-AFM"
  merged:   "b456d38"
upstream:
  origin:   "git://github.com/p6-pdf/perl6-Font-AFM.git"
  branch:   "master"
  commit:   "b456d38"
git-subrepo:
  version:  "0.2.1"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b136967"

--- a/p6-pdf/perl6-Font-AFM/README
+++ b/p6-pdf/perl6-Font-AFM/README
@@ -70,8 +70,8 @@ DESCRIPTION
        were placed with their origins coincident, and then painted.
 
     $afm.KernData
-       A two dimensional hash of from and two glyphs and kerning
-       amount.
+       A two dimensional hash containing from and to glyphs and kerning
+       widths.
 
     $afm.UnderlinePosition
        Recommended distance from the baseline for positioning
@@ -115,10 +115,6 @@ DESCRIPTION
        Returns a hash table that maps from glyph names to bounding
        box information. The bounding box consist of 4 numbers: llx,
        lly, urx, ury.
-
-    $afm.dump
-       Dumps the content of the Font::AFM object to STDOUT. Might
-       sometimes be useful for debugging.
 
     The AFM specification can be found at:
 
