--- a/p6-pdf/perl6-Font-AFM/Changes
+++ b/p6-pdf/perl6-Font-AFM/Changes
@@ -5,7 +5,7 @@
    Kerning now supported
    - $afm.Kern - returns kerning table as a two dimensional hash array
    - $afm.stringwidth("RVX", :kern) - computes stringwith after kerning
-   - $afm.kern("RVX") - new kerning method
+   - $afm.encode("RVX", :kern) - encode and kern characters.
 
 2015-04-30
 
@@ -17,11 +17,6 @@
    Build
    - included full set of AFM data in etc/Core14_Fonts
    - font metrics are computed at panda build time
-
-   Font::AFM
-   - stringwidth now works on all codepoints, not just latin-1 subset. Perl 6 strings are
-     fully unicode aware, Yay!
-   - factored out @ISOLatin1Encoding table. Replace with dependency on Font::Encoding
 
    Font::Metrics
    - classess are now lowercase, e.g. Font::Mertics::times-bold. Plays better with upstream
